--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
   GITHUB
-  <img src="https://static.pexels.com/photos/60597/dahlia-red-blossom-bloom-60597.jpeg"/>
+  <img src="https://static.pexels.com/photos/60597/dahlia-red-blossom-bloom-60597.jpeg" style="width:100%"/>
 </body>
 </html>
